Recommit unsaved changes for custom domain

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://k-mendoza-ramirez.github.io/personalsite",
+  "homepage": "https://kevinmendozaramirez.com",
   "name": "personalsite",
   "version": "0.1.0",
   "private": true,
